[gd_scene load_steps=2 format=3 uid="uid://cjq41cf2jqg1h"]

[ext_resource type="Script" uid="uid://c3xlbn570oc40" path="res://scripts/ui/hud.gd" id="1_qpvh6"]

[node name="VBoxContainer" type="VBoxContainer"]
size_flags_horizontal = 4
size_flags_vertical = 3
script = ExtResource("1_qpvh6")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 2
text = "游戏状态"

[node name="MoveCountLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MonsterSpawnLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="TimeBonusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="KilledCountLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MonsterTimerLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Spawning monster in..."
vertical_alignment = 1
